# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-12-10 mmichaud <m.michael.michaud@orange.fr>
  * Sort the list of SRS in WMS layer SRS chooser + fix some I18N

2016-11-30 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * New version of ColorChooser (0.8)
    - Added Color picker tool
    - Rewrite color panel to extend to 255 autocad Index colors
    - Tooltips now show correct color in 3 ways: 
      autocad Index color, hexadecimal and decimal RGB

2016-12-01 mmichaud <m.michael.michaud@orange.fr>
  * Create new layer was not active in Aggregation PlugIn (extension analysis)
  * Join Table : do not join null values any more

2016-11-30 Giuseppe Aruta
  * upgraded ColorChooser plugin to version 0.7. The plugin adds an extr
   attribute ("COLOR") with indexed colors for Autocad export compatibility
 
2016-11-24 Giuseppe Aruta
  * new upgrade of Sextante OpenJUMP binding that solves bugs #445 and #446
  
2016-11-24 ede
  * new windows exe launcher (2nd trial), that plainly runs the batch file 
    w/o need for jre in path to do so

2016-11-20 ede
  * made toolbars nonfloatable, which never was supported properly anyway

2016-11-15 mmichaud <m.michael.michaud@orange.fr>
  * Fix #353 Dialogs do not use preferred size on dual screen

2016-11-14 mmichaud <m.michael.michaud@orange.fr>
  * deactivate the misleading disjoint predicate in query and join plugins
  * #FR 249 - add "intersects interior point" and "interior point intersects"
    in query and join predicates

2016-11-12 mmichaud <m.michael.michaud@orange.fr>
  * Fix #442 Missing unsaved layers warning in SaveProjectPlugIn
  * Fix #441 Missing file overwrite warning in SaveLayersWithoutDataSourcePlugIn

2016-11-11 mmichaud <m.michael.michaud@orange.fr>
  * Add 3 functions in GeometryFunction plugin